--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Terraform Create Infrastructure
       working-directory: ./Infrastructure
       run: |
+        export ARM_CLIENT_ID='${{ secrets.ARM_CLIENT_ID }}'
+        export ARM_CLIENT_SECRET='${{ secrets.ARM_CLIENT_SECRET }}'
+        export ARM_TENANT_ID='${{ secrets.ARM_TENANT_ID }}'
         terraform init
         terraform validate
         terraform plan -out "infra.tfplan"
