--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,7 +39,7 @@ jobs:
         export ARM_CLIENT_ID='${{ secrets.ARM_CLIENT_ID }}'
         export ARM_CLIENT_SECRET='${{ secrets.ARM_CLIENT_SECRET }}'
         export ARM_TENANT_ID='${{ secrets.ARM_TENANT_ID }}'
-        export AZURE_SUBSCRIPTION_ID='${{ secrets.AZURE_SUBSCRIPTION_ID }}'
+        export ARM_SUBSCRIPTION_ID='${{ secrets.ARM_SUBSCRIPTION_ID }}'
         terraform init
         terraform validate
         terraform plan -out "infra.tfplan"
